modules/gdscript/tests/scripts/analyzer/errors/inline_getter_no_return.gd
var x:
	get:
		pass

func test():
	pass
